# numerical_tools_and_friends

./: .gitignore  .gitmodules  README.md  gui.ipynb  online_courses.ipynb  online_tools.ipynb  regex.ipynb  solvers_of_linear_systems_axb.md  tensor_unfolding.ipynb
after_format/: cuda_new_installation_ubuntu.sh  docker_step.sh  first_step.sh  install_fenics_ubuntu.sh  programming_tools.ipynb  second_step.yml  third_step.sh  z_manual_and_misc.sh
after_format/googlebenchmark_and_pastix/: install_benchmark.sh  install_pastix.sh
after_format/hidden_files/: _.bash_aliases  _.bashrc  _.detox_safe.tbl  _.detoxrc  _.gitconfig  _.hidden  _.style.yapf
after_format/server/: dockerfile and Portainer
after_format/server/nextcloud/: nextcloud_docker.sh
after_format/unison_profiles/: dropbox.prf  shadiplex.prf  shadiplex_pkgs.prf
automatic_and_symbolic_differentiation/: automatic_differentiation.ipynb  matrix_diff.py  minimisation_examples.ipynb  symbolic_differentiation.ipynb
automatic_and_symbolic_differentiation/symbolic-mat-diff-master/: matrix_diff.ipynb
cpp/: cpp.md  cpp_new.md  openmp_shared_memory_parallelisation.md  stifness_assembly.cpp
cpp/0_check/johnstonc_programmingtoday_sourcecode/appd_asciicodes/: appd_as.opt  appd_as.plg  appd_asciicodes.dsp  appd_asciicodes.dsw  appdasc.cpp
cpp/cpp_tests/: benchmark_mandel.cpp  benchmark_output.json  benchmark_plot.py  benchmark_std_vs_eigen.cpp  constexpr.cpp  expression_templates.cpp  polymorphism.cpp  return_value_optimisation.cpp  run.sh
cpp/cpp_tests/cmake_template/: CMakeLists.txt  main.cpp
cpp/cpp_tests/opencl_solver/: CMakeLists.txt  main.cpp
cpp/cpp_tests/openmp/: .cproject  .project  1  3  linked.cpp  mandel.cpp  openmp_test.cpp  prod_cons.cpp
cpp/cpp_tests/z_test/: CMakeLists.txt  main.cpp
cpp/gpu_cpp/gpu-tutorial/svd/: .cproject  CMakeLists.txt  test_svd.m
cpp/gpu_cpp_darcy/gpu-tutorial/: CMakeLists.txt
cpp/gpu_cpp_darcy/gpu-tutorial/Exercises/Exercise01/: DeviceInfo.cpp
cpp/gpu_cpp_darcy/gpu-tutorial/Exercises/Exercise03/: vadd.cl
cpp/gpu_cpp_darcy/gpu-tutorial/Exercises/Exercise13/CUDA-VADD/: vadd.cu
cpp/gpu_cpp_darcy/gpu-tutorial/common/: device_picker.hpp  matrix_lib.cpp
cpp/gpu_cpp_darcy/gpu-tutorial/svd/: .project  svd_jacobi.cu  svd_jacobi_0.cu
cpp/gpu_cpp_darcy/gpu-tutorial/test/game_of_life/: game_of_life.cl
cpp/gpu_cpp_darcy/gpu-tutorial/test/kernel/: matrix_multiply_basic.cl  matrix_multiply_blocked.cl  matrix_multiply_private_row_wise.cl  pi_ocl.cl
cpp/gpu_cpp_darcy/gpu-tutorial/test/matrix_multiply/: main.cpp
cpp/gpu_cpp_darcy/gpu-tutorial/test/matrix_multiply_blocked/: main.cpp
cpp/gpu_cpp_darcy/gpu-tutorial/test/pi_vectorised/: main.cpp
cpp/gpu_cpp_darcy/gpu-tutorial/test/vector_add_multiple/: main.cpp
cpp/intro_cpp_2020/: 1st_functions_and_variables.cpp  2nd_loops_and_conditions.cpp  3rd_classes.cpp  CMakeLists.txt  conanfile.txt  requirements.sh
cpp/tools_plot_cpp/gnuplot-cpp/: example  test_output.ps
fem/tools_mesh/: AVSparser.m  MSHparser.m  msh_reader.m  read_avs.m  read_gmsh.m  vtk_verify.py
fem/tools_mesh/PXDMF_edited_lmt/: XdmfFemGrid.m  XdmfGrid.m  XdmfGridBase.m  checkpxdmfstruct.m  fieldspxdmf.m  mvpxdmf  readpxdmf.m  readpxdmf2.m  save_pxdmf.m  save_xdmf.m  updatepxdmf  writepxdmf.m  writepxdmf2.m  writepxdmfset.m  writexdmf.m  writexdmf2.m  xdmf3writer.m  xdmf3writer_.m
fem/tools_mesh/mesh_refinement/: blabla.geo  initial.msh  nested_1.msh  nested_2.msh  nested_3.msh  nested_4.msh  nested_5.msh  refined_1.msh  refined_2.msh  refined_3.msh  refined_4.msh  refined_5.msh  untitled.geo
fem/tools_mesh/python_vtk/: plot_details.py  vtkmeshwriter.py
fem/tools_mesh/read_ansys_mesh/: export.mac  license.txt  model1.txt  model2.txt  read_ansys_mesh.m
fem/tools_mesh/vtk/: vtk_cpp.cpp  vtk_vector.m
gnuplot/3_plots_1_file/: GPM_e_over_h_ver1_2norm  GPM_e_over_h_ver2_2norm  GPM_e_over_h_ver3_2norm  e_over_h_v1_2norm  e_over_h_v2_2norm  e_over_h_v3_2norm  red_coeff_acc.gp  red_coeff_mean.dvi  red_coeff_mean.tex
gnuplot/scatter/: bounds_kappa_fb.data  gnup-pdf.sh  range_kappa.data  rangekappa.dvi  rangekappa.gp  rangekappa.ps  rangekappa.tex
latex/: compile_latex.sh  tex_new.sh
latex/tikz_standalone/: document.tex  document1.tex  document2.tex  tikz_jl_example.tex
matlab/: multinv.m  plotfade.m  spblkdiag.m
matlab/matlab_figure/: improvedExample.eps  matlab_fig.m  printpp.m
matlab/matlab_figure/export_fig/: export_fig.m
matlab/matlab_figure/magnifyOnFigure/: Info  magnifyOnFigure.m
matlab/matlab_mex/src_mex/: mex  mexcpp.cpp  shadi_mex.7z
matlab/matlab_mex/src_mex/semi_cleaned_version/mex_functions/: CMakeLists.txt
matlab/matlab_mex/src_mex/semi_cleaned_version/mex_functions/src/: CMakeLists.txt
matlab/matlab_mex/src_mex/semi_cleaned_version/mex_functions/src/compute_kinematic_hardening_space_mode/: CMakeLists.txt  compute_kinematic_hardening_space_mode.cpp  storage_aliases.h
matlab/matlab_mex/src_mex/semi_cleaned_version/mex_functions/src/compute_stress_space_mode/: CMakeLists.txt  compute_stress_space_mode.cpp
matlab/matlab_mex/src_mex/semi_cleaned_version/mex_functions/src/compute_time_mode/: CMakeLists.txt  compute_time_mode.cpp
matlab/matlab_mex/src_mex/semi_cleaned_version/mex_functions/src/include/: CMakeLists.txt  mxarray.h  test.cpp
matlab/matlab_mex/src_mex/semi_cleaned_version/mex_functions/src/orthonormalise_eigen/: CMakeLists.txt  orthonormalise_eigen.cpp
pi_small_projects/: raspberry_gpio.sh
python/: README.md  gui_python.ipynb  ipynb_to_py.txt
python/accelerate_python_with_numba/: 00_numba_cpu.ipynb  01_numba_gpu.ipynb  02_numba_gpu_kernels.ipynb
python/numpy_expressions/: numexpr.ipynb
python/parallelism_and_multithreading/: pymp.ipynb
python/python_benchmarks/: svd_benchmark.ipynb  svd_benchmark.py
python/tensorflow_gpu/: tensorflow_gpu_test.ipynb  tensorflow_gpu_test.py  tensorflow_gpu_test.sh
tensor_factorisation/: ALS_alternating_least_squares_and_OMP.ipynb  tensor_decomposition_test.py  tensor_unfolding.ipynb
tensor_factorisation/h_matrices/: hmatrix_master_test.m
(+1061 files in other folders)
